--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "A react-based component for displaying sheet cards.",
   "author": "Oz Hershco",
   "keywords": ["react", "components", "ui"],
-  "version": "1.0.5",
+  "version": "1.0.6",
   "license": "MIT",
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
@@ -19,6 +19,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "del -rf dist && cross-env NODE_ENV=production babel src/lib --out-dir dist --copy-files",
+    "sass": "node-sass src/lib/components/styles/main.scss src/App.css -w",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
