--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "react-flat-cards",
   "description": "A react-based component for displaying sheet cards.",
   "author": "Oz Hershco",
-  "keywords": ["react", "components", "ui"],
-  "version": "1.0.6",
+  "keywords": [
+    "react",
+    "components",
+    "ui"
+  ],
+  "version": "1.0.7",
   "license": "MIT",
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
@@ -19,7 +23,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "del -rf dist && cross-env NODE_ENV=production babel src/lib --out-dir dist --copy-files",
-    "sass": "node-sass src/lib/components/styles/main.scss src/App.css -w",
+    "sass": "node-sass src/lib/components/styles/main.scss src/App.scss -w",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
