--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "components",
     "ui"
   ],
-  "version": "1.0.7",
+  "version": "1.0.8",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "license": "MIT",
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
