update to packages and styling

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "components",
     "ui"
   ],
-  "version": "1.0.10",
+  "version": "1.0.14",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "files": [
@@ -20,15 +20,13 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
+    "node-sass": "^7.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "del -rf dist && cross-env NODE_ENV=production babel src/lib --out-dir dist --copy-files",
-    "sass": "node-sass src/lib/components/styles/main.scss src/App.scss -w",
+    "sass": "node-sass src/lib/components/styles/main.scss src/App.css -w",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -54,6 +52,7 @@
     "@babel/cli": "^7.17.6",
     "@babel/core": "^7.17.8",
     "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
     "cross-env": "^7.0.3",
     "sass": "^1.49.11",
     "sass-loader": "^12.6.0",
