--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "components",
     "ui"
   ],
-  "version": "1.0.14",
+  "version": "1.0.15",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "files": [
@@ -20,8 +20,10 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "babel-loader": "^8.2.4",
     "node-sass": "^7.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack-cli": "^4.9.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -54,7 +56,10 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "cross-env": "^7.0.3",
-    "sass": "^1.49.11",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-scripts": "5.0.0",
+    "node-sass": "^7.0.1",
     "sass-loader": "^12.6.0",
     "webpack": "^5.71.0"
   }
