--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "components",
     "ui"
   ],
-  "version": "1.0.16",
+  "version": "1.0.17",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "files": [
@@ -27,11 +27,13 @@
     "webpack-cli": "^4.9.2"
   },
   "scripts": {
+    "webpack": "npx webpack --config webpack.config.js",
     "start": "react-scripts start",
     "build": "del -rf dist && cross-env NODE_ENV=production babel src/lib --out-dir dist --copy-files",
     "sass": "node-sass src/lib/components/styles/main.scss src/App.css -w",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "develop": "webpack-dev-server --env.NODE_ENV=development --mode development"
   },
   "eslintConfig": {
     "extends": [
