--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "dist",
     "README.md"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Oz-Hershco/react-flat-cards"
+  },
   "license": "MIT",
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
